plugins {
    id 'java'
    id 'eclipse'
    id 'application'
}

group = 'cassdemo'
version = '1.0-SNAPSHOT'
description = 'CassandraDemo'

java {
    // Upgraded to Java 17
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url "https://repo.spring.io/milestone" }
    maven { url "https://repo.spring.io/release" }
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'ch.qos.logback:logback-classic:1.4.12'

    implementation 'com.datastax.cassandra:cassandra-driver-core:3.11.3'
    implementation 'org.apache.cassandra:cassandra-all:3.11.16'

    // JLine 3 for the Shell
    implementation 'org.jline:jline:3.25.1'
}

application {
    mainClass = 'cassdemo.Main'
}

layout.buildDirectory.set(file('bin'))

tasks.withType(JavaExec).configureEach {
    standardInput = System.in

    // Add these flags to permit reflection on internal Java modules
    jvmArgs(
            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
    )

    if (project.hasProperty('myargs')) {
        args(myargs.split(' ').collect { it.trim() })
    }
}